force-app/main/default/objects/Bundle_Submitted__e/Bundle_Submitted__e.object-meta.xml
<CustomObject>
    <label>商品セット送信済み</label>
    <pluralLabel>商品セット送信済み</pluralLabel>
</CustomObject>