force-app/main/default/objects/Bundle_Submitted__e/fields/Bundle_Id__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Id__c</fullName>
    <label>商品セットId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>