force-app/main/default/objects/Bundle_Submitted__e/fields/Qty__c.field-meta.xml
<CustomField>
    <fullName>Qty__c</fullName>
    <label>数量</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>